<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtTatva"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:autoSizeTextType="uniform"
        android:background="@color/black"
        android:text="@string/tatvsoft"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:targetApi="o" />
    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="text"
        android:hint="@string/enter_name"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"/>

        <EditText
          android:id="@+id/txtEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:layout_margin="20dp"
          android:hint="@string/enter_the_emaill"
          android:textSize="15sp"
          android:textColor="@color/black"
          android:textStyle="bold" />
    <EditText
        android:id="@+id/txtPassoowrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="15sp"
        android:hint="@string/enter_the_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="15sp"
        android:hint="@string/enter_the_contect_number"
        android:inputType="phone"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <NumberPicker
        android:id="@+id/numberPickerAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />
        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/next"
            android:textSize="34sp"
            tools:ignore="SpeakableTextPresentCheck"/>



</LinearLayout>